# multi-agent-orchestrator

./: .gitignore  README.md  pyproject.toml
demo/: README.md
demo/input/: release-review-brief.md
demo/output/: 01-step-1.md  02-step-2.md  03-step-3.md  04-step-4.md  decision-memo.md  execution-events.json  execution-plan.json  review.json  run-summary.json
docs/: architecture.md  azure-foundry.md  release-review-playbook.md
scripts/: run_live_demo.py
src/: __init__.py  agent.py  message.py  orchestrator.py  state.py  task.py
src/multi_agent_orchestrator/: __init__.py  client.py  config.py  demo.py  models.py  orchestrator.py  prompts.py
tests/: test_orchestrator.py
