[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-orchestrator"
version = "0.1.0"
description = "Distributed agent communication and task orchestration framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
distributed = [
    "redis>=5.0.0",
    "aioredis>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Inferensys/multi-agent-orchestrator"
Repository = "https://github.com/Inferensys/multi-agent-orchestrator"
Documentation = "https://github.com/Inferensys/multi-agent-orchestrator#readme"
