[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-orchestrator"
version = "0.2.0"
description = "Azure-backed planner-specialist-review orchestrator with checked execution artifacts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=2.0.0,<3.0.0",
    "pydantic>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
mao-run = "multi_agent_orchestrator.demo:main"

[project.urls]
Homepage = "https://github.com/Inferensys/multi-agent-orchestrator"
Repository = "https://github.com/Inferensys/multi-agent-orchestrator"
Documentation = "https://github.com/Inferensys/multi-agent-orchestrator#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_agent_orchestrator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
